[package]
name = "cosmic-driver"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]

cosmic-macros = { path="../cosmic-macros", version = "0.3.14" }
cosmic-space = { path= "../cosmic-space", version = "0.3.14" }
cosmic-nom = { path="../cosmic-nom", version = "0.3.14" }
async-trait = "0.1.81"
lazy_static = "1.5.0"
