[package]
name = "cosmic-host"
description = "Wasm host for Starlane.  https://starlane.io"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
