[package]
name = "cosmic-host"
description = "Wasm host for Starlane.  https://starlane.io"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
wasmer = {  version="4.3.7", features=["compiler"] }
wasmer-wasix = {  version="0.27.0", features=["sys-thread"]  }

tokio = { version="1.40.0", features=["full"] }
anyhow = "1.0.86"
virtual-fs = "0.16.0"
async-trait = "0.1.81"
wasmer-compiler-singlepass = "4.3.7"
bytes = "1.7.1"
